--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="./img/logo.png" style="width:40px"alt="" class="d-inline-block">Manifesta</a>
+          <a class="navbar-brand" href="index.html"><img src="./Manifesta/img/logo.png" style="width:40px"alt="" class="d-inline-block">Manifesta</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
